# texture_generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
rendering/: Cargo.toml
rendering/examples/: ascii.rs  colored.rs  textured.rs
rendering/src/: lib.rs
rendering/src/implementation/: initialization.rs  input.rs  mod.rs  renderer.rs  shader.rs  texture.rs  vertex.rs  window.rs
rendering/src/implementation/builder/: color.rs  mod.rs  texture.rs
rendering/src/interface/: app.rs  input.rs  mod.rs  rendering.rs  window.rs
resources/: lookup.yaml
resources/process/: light.yaml
resources/shader/: colored.fragment  colored.vertex  textured.fragment  textured.vertex
resources/textures/: brick.yaml  brick_wall.yaml  herringbone.yaml  parquet.yaml  random-ashlar.yaml  sett.yaml  test.yaml  wood-rings.yaml
resources/tilemaps/: example.ofm  example.otm  example.tm
texture_generation/: Cargo.toml
texture_generation/src/: lib.rs  main.rs
texture_generation/src/definition/: mod.rs
texture_generation/src/definition/generation/: mod.rs
texture_generation/src/definition/generation/component/: border.rs  layout.rs  mod.rs
texture_generation/src/definition/generation/component/rendering/: color.rs  depth.rs  mod.rs
texture_generation/src/definition/generation/component/rendering/color/: mod.rs  wood.rs
texture_generation/src/definition/generation/process/: lighting.rs  mod.rs
texture_generation/src/definition/math/: mod.rs  shape_factor.rs
texture_generation/src/generation/: data.rs  io.rs  mod.rs  occupancy.rs  random.rs
texture_generation/src/generation/component/: border.rs  layout.rs  mod.rs
texture_generation/src/generation/component/border/: mod.rs  shrink.rs
texture_generation/src/generation/component/layout/: brick.rs  herringbone.rs  mod.rs  random_ashlar.rs  repeat.rs  split.rs
texture_generation/src/generation/component/rendering/: color.rs  color_factory.rs  depth.rs  depth_factory.rs  mod.rs
texture_generation/src/generation/component/rendering/color/: factory.rs  mod.rs  selector.rs  wood.rs
texture_generation/src/generation/data/: aabb.rs  generation.rs  mod.rs  texture.rs
texture_generation/src/generation/process/: ambient_occlusion.rs  lighting.rs  mod.rs
texture_generation/src/math/: aabb.rs  color.rs  interpolate.rs  mod.rs  point.rs  shape.rs  shape_factory.rs  side.rs  size.rs  vector3.rs
texture_generation/src/math/occupancy/: mod.rs  tile.rs
texture_generation/src/utils/: error.rs  logging.rs  mod.rs  resource.rs
texture_generation_app/: Cargo.toml
texture_generation_app/src/generation/: mod.rs
texture_generation_cli/: Cargo.toml
texture_generation_cli/src/: main.rs
texture_generation_cli/src/definition/: mod.rs
texture_generation_cli/src/generation/: mod.rs
texture_generator/: Cargo.toml
texture_generator/src/: lib.rs  main.rs
tilemap/: Cargo.toml
tilemap/src/: lib.rs  tilemap2d.rs
tilemap/src/rendering/: furniture.rs  mod.rs  node.rs  style.rs  texture.rs  wall.rs
tilemap/src/rendering/furniture/: mod.rs
tilemap/src/rendering/resource/: mod.rs
tilemap/src/rendering/style/: door.rs  edge.rs  front.rs  furniture.rs  handle.rs  mod.rs  node.rs  wall.rs  window.rs
tilemap/src/tile/: mod.rs  surface.rs
tilemap/src/tilemap/: border.rs  mod.rs  node.rs  selector.rs  tile.rs  tilemap2d.rs
tilemap/src/tilemap/furniture/: map2d.rs  mod.rs
tilemap/src/tilemap/tile/: mod.rs  surface.rs
tilemap_editor/: Cargo.toml
tilemap_editor/src/: data.rs  main.rs  message.rs  resources.rs
tilemap_editor/src/preview/: widget.rs
tilemap_editor/src/tool/: door.rs  furniture.rs  tile.rs  tools.rs  wall.rs  window.rs
tilemap_editor/src/tool/map/: file.rs  mod.rs  new.rs
tilemap_editor_iced/: Cargo.toml
tilemap_editor_iced/src/: data.rs  main.rs  message.rs  resources.rs  toolbar.rs
tilemap_editor_iced/src/preview/: mod.rs  renderer.rs  widget.rs
tilemap_editor_iced/src/tool/: door.rs  furniture.rs  mod.rs  tile.rs  tools.rs  wall.rs  window.rs
tilemap_editor_iced/src/tool/map/: new.rs
tilemap_io/: Cargo.toml
tilemap_io/src/: lib.rs
tilemap_io/src/rendering/: resource.rs
tilemap_io/src/rendering/resource/: lookup.rs  mod.rs
tilemap_io/src/rendering/style/: door.rs  edge.rs  front.rs  furniture.rs  handle.rs  mod.rs  node.rs  wall.rs  window.rs
tilemap_io/src/tilemap/: mod.rs
tilemap_io/src/tilemap/furniture/: map2d.rs  mod.rs
tilemap_serde/: Cargo.toml
tilemap_serde/src/: lib.rs
tilemap_serde/src/rendering/: mod.rs  resource.rs
tilemap_serde/src/rendering/style/: door.rs  edge.rs  mod.rs  window.rs
(+54 files in other folders)
