[package]
name = "rendering"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
chrono = "0.4"
env_logger = "0.8"
glium = "0.29"
image = "0.23"
log = "0.4"
svgbobdoc = "0.2"