[package]
name = "texture_generation"
version = "0.4.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.8"
image = "0.23"
log = "0.4"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
svgbobdoc = "0.2"
thiserror = "1.0"

[dev-dependencies]
assert_approx_eq = "1.1"
