[package]
name = "texture_generator"
version = "0.4.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
structopt = "0.3"
texture_generation = { path = "../texture_generation" }
