[package]
name = "tilemap_editor"
version = "0.2.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.8"
image = "0.23"
log = "0.4"
rendering = { path = "../rendering" }
structopt = "0.3"
svgbobdoc = "0.2"
texture_generation = { path = "../texture_generation" }
