[package]
name = "tilemap_serde"
version = "0.2.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
texture_generation = { path = "../texture_generation" }
tilemap = { path = "../tilemap" }